# midias

./: .gitignore  Dockerfile  README.MD  docker-compose.yml  heroku.yml  main.py  package-lock.json  package.json  pyproject.toml  reame.md  server.mjs
api/: .gitignore  Dockerfile  main.py  pyproject.toml
api/models/: audio.py  video.py
models/: audio.py  video.py
routes/: video_routes.py
