[tool.poetry]
name = "midias"
version = "0.1.0"
description = ""
authors = ["lgmo <lgmo@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
librosa = "^0.10.1"
pydantic = "^2.6.1"
uvicorn = "^0.27.1"
starlette = "0.36.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
