[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Leonardo Moreira"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.18,<3.10"
pyAudioAnalysis = "^0.3.14"                                                                                                        
uvicorn = "^0.27.1"                                                                                                                
fastapi = "^0.109.2"                                                                                                               
python-multipart = "^0.0.9"                                                                                                        
starlette = "0.36.3"
                                                                                                                                   
                                                                                                                                   
[build-system]                                                                                                                     
requires = ["poetry-core"]                                                                                                         
build-backend = "poetry.core.masonry.api"    